trunk/Wrappers/MyGUI.Export/Generate/MyGUI.Export_TabControl.h


		MYGUIEXPORT void MYGUICALL ExportTabControl_ClearItemDataAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			static_cast< MyGUI::TabControl * >(_native)->clearItemDataAt(
				Convert<size_t>::From( _index ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetItemData_item_data( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item ,
			Convert<MyGUI::Any>::Type _data )
		{
			static_cast< MyGUI::TabControl * >(_native)->setItemData(
				Convert<MyGUI::TabItem *>::From( _item ) ,
				Convert<MyGUI::Any>::From( _data ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetItemDataAt_index_data( MyGUI::Widget* _native,
			Convert<size_t>::Type _index ,
			Convert<MyGUI::Any>::Type _data )
		{
			static_cast< MyGUI::TabControl * >(_native)->setItemDataAt(
				Convert<size_t>::From( _index ) ,
				Convert<MyGUI::Any>::From( _data ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SwapItems_index1_index2( MyGUI::Widget* _native,
			Convert<size_t>::Type _index1 ,
			Convert<size_t>::Type _index2 )
		{
			static_cast< MyGUI::TabControl * >(_native)->swapItems(
				Convert<size_t>::From( _index1 ) ,
				Convert<size_t>::From( _index2 ) );
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_FindItemWith_name( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _name )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->findItemWith(
				Convert<const MyGUI::UString &>::From( _name ) ));
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportTabControl_FindItemIndexWith_name( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _name )
		{
			return Convert<size_t>::To( static_cast< MyGUI::TabControl * >(_native)->findItemIndexWith(
				Convert<const MyGUI::UString &>::From( _name ) ));
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportTabControl_FindItemIndex_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			return Convert<size_t>::To( static_cast< MyGUI::TabControl * >(_native)->findItemIndex(
				Convert<MyGUI::TabItem *>::From( _item ) ));
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportTabControl_GetItemIndex_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			return Convert<size_t>::To( static_cast< MyGUI::TabControl * >(_native)->getItemIndex(
				Convert<MyGUI::TabItem *>::From( _item ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_GetItemAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->getItemAt(
				Convert<size_t>::From( _index ) ));
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_RemoveAllItems( MyGUI::Widget* _native )
		{
			static_cast< MyGUI::TabControl * >(_native)->removeAllItems( );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_RemoveItem_item( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _item )
		{
			static_cast< MyGUI::TabControl * >(_native)->removeItem(
				Convert<MyGUI::TabItem *>::From( _item ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_RemoveItemAt_index( MyGUI::Widget* _native,
			Convert<size_t>::Type _index )
		{
			static_cast< MyGUI::TabControl * >(_native)->removeItemAt(
				Convert<size_t>::From( _index ) );
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_AddItem_name_data( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _name ,
			Convert<MyGUI::Any>::Type _data )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->addItem(
				Convert<const MyGUI::UString &>::From( _name ) ,
				Convert<MyGUI::Any>::From( _data ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_AddItem_name( MyGUI::Widget* _native,
			Convert<const MyGUI::UString &>::Type _name )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->addItem(
				Convert<const MyGUI::UString &>::From( _name ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_InsertItem_to_name_data( MyGUI::Widget* _native,
			Convert<MyGUI::TabItem *>::Type _to ,
			Convert<const MyGUI::UString &>::Type _name ,
			Convert<MyGUI::Any>::Type _data )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->insertItem(
				Convert<MyGUI::TabItem *>::From( _to ) ,
				Convert<const MyGUI::UString &>::From( _name ) ,
				Convert<MyGUI::Any>::From( _data ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_InsertItemAt_index_name_data( MyGUI::Widget* _native,
			Convert<size_t>::Type _index ,
			Convert<const MyGUI::UString &>::Type _name ,
			Convert<MyGUI::Any>::Type _data )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->insertItemAt(
				Convert<size_t>::From( _index ) ,
				Convert<const MyGUI::UString &>::From( _name ) ,
				Convert<MyGUI::Any>::From( _data ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_InsertItemAt_index_name( MyGUI::Widget* _native,
			Convert<size_t>::Type _index ,
			Convert<const MyGUI::UString &>::Type _name )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->insertItemAt(
				Convert<size_t>::From( _index ) ,
				Convert<const MyGUI::UString &>::From( _name ) ));
		}

		MYGUIEXPORT Convert<MyGUI::TabItem *>::Type MYGUICALL ExportTabControl_GetItemSelected( MyGUI::Widget* _native )
		{
			return Convert<MyGUI::TabItem *>::To( static_cast< MyGUI::TabControl * >(_native)->getItemSelected( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetItemSelected( MyGUI::Widget* _native , Convert<MyGUI::TabItem *>::Type _value )
		{
			static_cast< MyGUI::TabControl * >(_native)->setItemSelected( Convert<MyGUI::TabItem *>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportTabControl_GetIndexSelected( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::TabControl * >(_native)->getIndexSelected( ) );
		}

		MYGUIEXPORT void MYGUICALL ExportTabControl_SetIndexSelected( MyGUI::Widget* _native , Convert<size_t>::Type _value )
		{
			static_cast< MyGUI::TabControl * >(_native)->setIndexSelected( Convert<size_t>::From( _value ) );
		}

		MYGUIEXPORT Convert<size_t>::Type MYGUICALL ExportTabControl_GetItemCount( MyGUI::Widget* _native )
		{
			return Convert<size_t>::To( static_cast< MyGUI::TabControl * >(_native)->getItemCount( ) );
		}